--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
+    "build-rename": "npm run build-rename-js && npm run build-rename-css",
+    "build-rename-js": "mv build/static/js/main.*.js build/static/index.js && rm -rf build/static/js",
+    "build-rename-css": "mv build/static/css/main.*.css build/static/index.css && rm -rf build/static/css",
     "dev": "set PORT=3006 && react-app-rewired start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run build-rename",
+    "build-local": "set REACT_APP_TYPE=local && react-scripts build && npm run build-rename",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "js:check": "npx eslint \"src/**/*.{ts,tsx,js}\"",
