--- a/package.json
+++ b/package.json
@@ -22,13 +22,11 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
-    "build-rename": "npm run build-rename-js && npm run build-rename-css",
-    "build-rename-js": "mv build/static/js/main.*.js build/static/index.js && rm -rf build/static/js",
-    "build-rename-css": "mv build/static/css/main.*.css build/static/index.css && rm -rf build/static/css",
-    "build-rename-html": "rm build/index.html && mv build/local.html build/index.html",
     "dev": "set PORT=3006 && react-app-rewired start",
     "build": "react-scripts build",
-    "build-local": "set REACT_APP_TYPE=local && react-scripts build && npm run build-rename && npm run build-rename-html",
+    "build-website": "react-scripts build && cd scripts && node add-analytics.js",
+    "build-local": "set REACT_APP_TYPE=local && react-scripts build && cd scripts && node remove-hash.js && node add-local.js",
+    "build-docker": "set REACT_APP_TYPE=local && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "js:check": "npx eslint \"src/**/*.{ts,tsx,js}\"",
