--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   },
   "scripts": {
     "dev": "set PORT=3006 && react-app-rewired start",
-    "build": "react-scripts build",
-    "build:website": "react-scripts build && cd scripts && node add-analytics.js",
-    "build:local": "react-scripts build && cd scripts && node remove-hash.js && node add-local.js",
-    "build:docker": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "build": "react-app-rewired build",
+    "build:website": "react-app-rewired build && cd scripts && node add-analytics.js",
+    "build:local": "react-app-rewired build && cd scripts && node remove-hash.js && node add-local.js",
+    "build:docker": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "js:check": "npx eslint \"src/**/*.{ts,tsx,js}\"",
     "js:fix": "npx eslint \"src/**/*.{ts,tsx,js}\" --fix",
     "css:check": "npx stylelint \"src/**/*.{css,scss,sass}\"",
