--- a/.github/workflows/assayo.yml
+++ b/.github/workflows/assayo.yml
@@ -22,10 +22,9 @@ jobs:
       run: |
         git fetch --unshallow || true
         git clone https://github.com/bakhirev/assayo.git
-        git --no-pager log --raw --numstat --oneline --all --reverse --date=iso-strict --pretty=format:"%ad>%aN>%aE>%s" > ./assayo/build/log.txt
-
+        git --no-pager log --raw --numstat --oneline --all --reverse --date=iso-strict --pretty=format:"%ad>%aN>%aE>%s" | sed -e 's/\\/\\\\/g' | sed -e 's/`/"/g' | sed -e 's/\$/S/g' | sed -e '1s/^/R(f\`/' | sed -e '$s/$/\`\);/' > ./assayo/build/log.txt
     - name: Archive logs as artifact
       uses: actions/upload-artifact@v4
       with:
-        name: Assayo
+        name: Commit statistics report
         path: ./assayo/build/
