--- a/documents/ActionExample.yml
+++ b/documents/ActionExample.yml
@@ -29,18 +29,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
     - name: Create report
-      run: |
-        git clone https://github.com/bakhirev/assayo.git
-        git --no-pager log --raw --numstat --oneline --all --reverse --date=iso-strict --pretty=format:"%ad>%aN>%aE>%s" | sed -e 's/\\/\\\\/g' | sed -e 's/`/"/g' | sed -e 's/\$/S/g' | sed -e '1s/^/R(f\`/' | sed -e '$s/$/\`\);/' > ./assayo/build/log.txt
-
-    - name: Archive the report as an artifact
-      uses: actions/upload-artifact@v4
+      uses: bakhirev/assayo@v0.0.2
       with:
-        name: Commit statistics report
-        path: ./assayo/build/
+        add_file_info: true
